📦 update package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muxifier",
   "version": "0.1.1-2",
-  "description": "Attach/detach your server application to muxway",
+  "description": "Attach/detach your server application to muxify",
   "module": "./dist/es/main.js",
   "main": "./dist/cjs/main.js",
   "scripts": {
