--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "packfiles": "^0.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.5",
+    "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
