--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "muxifier",
-  "version": "0.1.1",
+  "version": "1.0.0-0",
   "description": "Attach/detach your server application to muxify",
   "module": "./dist/es/main.js",
   "main": "./dist/cjs/main.js",
